--- a/.fixtures.yml
+++ b/.fixtures.yml
@@ -2,4 +2,4 @@ fixtures:
   repositories:
     "stdlib": "git://github.com/puppetlabs/puppetlabs-stdlib.git"
   symlinks:
-    "ganglia": "#{source_dir}"
+    "tzdata": "#{source_dir}"
