--- a/.fixtures.yml
+++ b/.fixtures.yml
@@ -1,7 +1,7 @@
 fixtures:
   repositories:
-    "stdlib":
-      repo: "git://github.com/puppetlabs/puppetlabs-stdlib.git"
-      ref: "3.0.0"
+    stdlib:
+      repo: 'git://github.com/puppetlabs/puppetlabs-stdlib.git'
+      ref:  '3.0.0'
   symlinks:
-    "tzdata": "#{source_dir}"
+    tzdata: "#{source_dir}"
