--- a/.gitignore
+++ b/.gitignore
@@ -1,9 +1,10 @@
+.bundle
 Gemfile.lock
 *.orig
 *.patch
 pkg/
 *.rej
-.rspec_system/
 spec/fixtures/manifests/
 spec/fixtures/modules/
 *.swp
+.vagrant
